<resources>
    <string name="app_name">Service Blueprint</string>
    <string name="basel">Basel Aero</string>
    <string name="next">Вперед</string>
    <string name="back">Назад</string>
    <string name="sop">Служба организации перевозок</string>
    <string name="sab">Служба авиационной безопасности</string>
    <string name="label">Анкета Service Blueprint</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="cross">x</string>
    <string name="timer">Таймер</string>
    <string name="no_value">Не оценивается</string>
    <string name="finished">\nТестирование завершено!\n</string>
    <string name="result"><b>\nСуммарный результат = </b></string>
    <string name="login">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="wrong_creds">\nНеверные учетные данные\n</string>
    <string name="time">Время выполенения = </string>
    <string name="seconds"> c. </string>
    <string name="exit">Выход</string>
    <string name="airport_choose">Выберите аэропорт:</string>
    <string name="service_choose">Выберите службу:</string>
    <string name="commission_choose">Выберите комиссию:</string>
    <string name="empty_fields">"Заполните все поля!"</string>
    <string name="agreed">Я согласен(-на)</string>
    <string name="secret_passenger">Тайный пассажир</string>
    <string name="add_photo">Приложить фото оцениваемого агента</string>
    <string name="photo_success">Фото добавлено</string>
    <string name="disclaimer">Условия использования:\n
                                1. Пользователь приложения понимает, что отрицательный отзыв\n
                                    повлечет за собой служебное расследование,
                                    и обязуется нести ответственность за свой отзыв.\n
                                2. Предоставить о себе достоверную информацию, номер рейса и электронную почту.\n
                                3. Пользователь согласен на обработку персональных данных.\n
                                4. Прочее</string>
</resources>
