<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/LoginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/login"
        android:layout_above="@+id/PassEditText"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/PassEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/LoginEditText"
        android:layout_alignStart="@+id/LoginEditText"
        android:layout_alignRight="@+id/LoginEditText"
        android:layout_alignEnd="@+id/LoginEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="NextButtonClick"
        android:layout_marginBottom="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/app_name"
        android:layout_above="@+id/LoginEditText" />

</RelativeLayout>